--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -64,6 +64,10 @@
                 <span class="material-icons-outlined" style="font-size: 24px">person</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Terceros</font>
             </a>
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['proveedores'] } }]" style="color: white">
+                <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Proveedores</font>
+            </a>
             <a mat-list-item (click)="logout()" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">logout</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Salir</font>
