--- a/src/app/components/products/productos/productos.component.html
+++ b/src/app/components/products/productos/productos.component.html
@@ -26,10 +26,12 @@
                     <th style="width: 10%; ">Color</th>
                     <th style="width: 10%; ">Atributo</th>
                     <th style="width: 10%; ">Género</th>
-                    <th style="width: 15%; ">Modelo</th>
+                    <th style="width: 12%; ">Modelo</th>
                     <th style="width: 19%; ">Producto</th>
                     <th style="width: 6%; ">Tamaño</th>
-                    <th style="width: 6%; ">Precio</th>
+                    <th style="width: 6%; ">Uni. Medida</th>
+                    <th style="width: 6%; ">Impuesto</th>
+                    <!--<th style="width: 6%; ">Precio</th>-->
                     <th style="width: 14%; "></th>
                 </tr>
             </thead>
@@ -42,7 +44,9 @@
                     <td>{{producto.modelo_nombre}}</td>
                     <td>{{producto.nombre}}</td>
                     <td>{{producto.tamanio}}</td>
-                    <td>{{producto.pvp}}</td>
+                    <td>{{producto.unidad_medida}}</td>
+                    <td>{{producto.impuesto_nombre}}</td>
+                    <!--<td>{{producto.pvp}}</td>-->
                     <td style="text-align: center;">
                         <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
                             data-placement="bottom" title="Editar Modelo Producto"
