--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -29,11 +29,17 @@
                     <span class="material-icons-outlined" style="font-size: 20px">payment</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas</font>
                 </a>
+                <!--
                 <a mat-list-item style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuentas</font>
                 </a>
+                -->
             </div>
+            <a mat-list-item style="color: white" [routerLink]="[{ outlets: { contentClient: ['cuadre-caja'] } }]">
+                <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
+                <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuadre de Caja</font>
+            </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-productos'] } }]"
                 style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
@@ -46,7 +52,8 @@
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['pedido-sugeridos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
-                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido
+                </font>
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">shopping_cart</span>
