--- a/src/app/components/sales/ventaprov/ventaprov.component.html
+++ b/src/app/components/sales/ventaprov/ventaprov.component.html
@@ -44,7 +44,7 @@
                         <td (click)="openModalDetalle(movimiento)">{{movimiento.fecha_emision | slice:0:10}}</td>
                         <td>
                             <a class="btn btn-success" (click)="openModal()" 
-                            >GENERAR NOTA DE PAGO
+                            >GENERAR
                             </a>
                         </td>
                     </tr>
