--- a/src/app/components/cash-balancing/cash-balancing.component.css
+++ b/src/app/components/cash-balancing/cash-balancing.component.css
@@ -7,3 +7,43 @@
 .card-body {
     overflow-x: auto
 }
+
+.cool-input {
+    border: 1px solid #35b0e9;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 14px;
+  }
+
+  .icon-container {
+    top: 20px;
+    position: relative;
+  }
+  
+  .icono-input {
+    position: absolute;
+    top: 0;
+    right: 400px;
+  }
+
+  .label-input {
+    position: absolute;
+    top: 10px;
+    right: 170px;
+    font-size: 20px;
+  }
+  
+  .resultado-input {
+    position: absolute;
+    top: 0;
+    right: 35px;
+    width: 150px;
+    height: 35px;
+    text-align: center;
+    /* Estilos adicionales para el input del resultado */
+  }
+  
+  .cool-input {
+    width: 100px; /* Ajusta el tamaño de los inputs según tus necesidades */
+  }
+  
