--- a/src/app/components/cash-balancing/cuadre-mov/cuadre-mov.component.html
+++ b/src/app/components/cash-balancing/cuadre-mov/cuadre-mov.component.html
@@ -26,7 +26,7 @@
                         <td>{{movimientos.id}}</td>
                         <td>{{movimientos.updated_at}}</td>
                         <td *ngIf="showValorAgregado">{{movimientos.detalle_pago}}</td>
-                        <td>{{movimientos.total_imp}}</td>
+                        <td>{{movimientos.importe_total}}</td>
                     </tr>
                 </tbody>
             </table>
